# ai-harness-api-py

./: .gitignore  README.md  cli-comparison.md  pyproject.toml
src/ai_harness_api/: __init__.py  base.py  types.py
src/ai_harness_api/backends/: claude.py  codex.py  gemini.py
src/ai_harness_api/cli/: backends.py  main.py
tests/: test_claude.py  test_cli.py  test_codex.py  test_gemini.py
